<resources>
    <string name="app_name">ProCat</string>
    <string name="error">Неизвестная ошибка</string>
    <string name="network_error">Во время выполнения запроса произошла ошибка.\nПроверьте подключение к сети</string>

    <string name="toolbar_title_auth">Авторизация</string>
    <string name="phone_number_title">Номер телефона</string>
    <string name="phone_number_wrong">Проверьте правильность номера</string>
    <string name="email_title">Email</string>
    <string name="email_error">Проверьте правильность введенного email</string>
    <string name="name_title">Ваше имя</string>
    <string name="name_error">Имя не может быть меньше 3-х символов</string>
    <string name="confirmation_code_title">Код подтверждения</string>
    <string name="confirmation_code_error">Введен неверный код</string>
    <string name="send_confirmation_code_title">Получить код подтверждения</string>
    <string name="continue_title">Продолжить</string>
    <string name="scan_item">Сканировать код</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="logout">Выйти из аккаунта</string>

    <string name="input_phone_number_title">Пожалуйста, введите номер телефона</string>
    <string name="input_confirmation_title">Введите код из уведомления</string>
    <string name="registration_offer_title">Учетная запись с таким номером телефона не найдена.\nДля регистрации заполните следующие поля</string>
    <string name="login_continue">Для входа нажмите на соответствующую кнопку</string>

    <string name="confirmation_notification_title">Код подтверждения</string>
    <string name="confirmation_notification_text">Ваш код: %s</string>
    <string name="confirmation_notification_channel_name">Код подтверждения</string>
    <string name="confirmation_notification_channel_description"> Получение кодов подтверждения</string>

    <string name="toolbar_profile_action">Профиль</string>
    <string name="toolbar_profile_title">Профиль</string>
    <string name="toolbar_home_title">Вернуться к списку точек проката</string>
    <string name="auth_promo">Для начала аренды войдите или зарегистрируйтесь</string>
    <string name="profile_username">Добро пожаловать,\n%s</string>
    <string name="profile_pay_amount_title">К оплате:</string>
    <string name="rent_item_finish_hint">Для завершения аренды отсканируйте qr-код на таком предмете</string>
    <string name="profile_phone">Номер телефона: %s</string>
    <string name="profile_email">Email: %s</string>

    <string name="rent_item_hint">Для начала аренды отсканируйте qr-код на таком предмете</string>
    <string name="scanner_hint">Для начала аренды поместите в рамку QR-код, наклеенный на нужном вам предмете</string>
    <string name="rent_auth_request">Пожалуйста, войдите в учетную запись для начала аренды</string>

    <style name="item_detail_title">Просмотр снаряжения</style>
    <string name="start_rent">Начать аренду</string>
    <string name="rent_start_success">Аренда началась.\nМожно пользоваться!</string>
    <string name="finish_rent">Завершить аренду</string>
    <string name="rent_payment_amount_title">К оплате:</string>
    <string name="payment_error">Во время оплаты произошла ошибка.\nПопробуйте повторить оплату</string>
    <string name="rent_unavailable_hint">К сожалению, сейчас аренда данного предмета недоступна.\nВы можете арендовать другой свободный предмет или попробовать позже</string>

    <string name="payment_title">Оплата</string>
    <string name="payment_amount_title">К оплате:</string>
    <string name="payment_hint">Аренда приостановлена, цена заморожена.\nПожалуйста, оплатите аренду в течение 12 минут, иначе цена может увеличиться</string>
    <string name="payment_success">Оплата прошла успешно.\nСпасибо за использование ProCat!</string>
    <string name="payment_success_amount">Сумма платежа:</string>
    <string name="payment_success_credit_card">Номер банковской карты:</string>
    <string name="payment_success_time">Время проведения платежа:</string>
    <string name="payment_success_rent_id">Служебный идентификатор аренды:</string>
    <string name="payment_button">Оплатить</string>
    <string name="payment_button_finish">Вернуться в профиль</string>
    <string name="credit_card_title">Номер банковской карты</string>
    <string name="credit_card_error">Проверьте правильность номера банковской карты</string>

    <string name="update_error">При обновлении данных произошла ошибка</string>
</resources>